<resources>
    <string name="app_name">Music Player</string>
    <string name="search">Tìm kiếm</string>
    <string name="name">Name</string>
    <string name="artist">Artist</string>
    <string name="example_time">3:45</string>
    <string name="dot">●</string>
    <string name="example_size">3,10 MB</string>
    <string name="random_song">Phát ngẫu nhiên</string>
    <string name="play_list">Danh sách phát</string>
    <string name="notification">Thông báo</string>
    <string name="current_time">0:00</string>
</resources>