<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/bg_item_song"
    android:padding="10dp">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgSong"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_music"
        app:riv_corner_radius="10dp" />

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgSong"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/tvNameSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:fontFamily="@font/inter_bold"
            android:maxLines="1"
            android:paddingBottom="2dp"
            android:text="@string/name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNameSong"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:text="@string/artist"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvLengthSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvArtist"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:text="@string/example_time"
            android:textColor="@color/white"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/tvDot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvArtist"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tvLengthSong"
            android:paddingTop="2dp"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSizeSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvArtist"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/tvDot2"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:maxLines="1"
            android:paddingTop="2dp"
            android:text="@string/example_size"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/imgMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icon_more_vert_24"
        android:visibility="gone"
        tools:ignore="ContentDescription" />


</RelativeLayout>