<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_light">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_close_24"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvNameSong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/inter_extranold"
        android:padding="20dp"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgSong"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_above="@+id/controls"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/music_icon_big"
        app:riv_corner_radius="130dp" />


    <RelativeLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="20dp"
        android:paddingVertical="40dp">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:progressBackgroundTint="@color/grey"
            android:progressTint="@color/white"
            android:thumbTint="@color/white" />


        <TextView
            android:id="@+id/tvCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/current_time"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvTotalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:text="@string/example_time"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTotalTime"
            android:paddingVertical="20dp">

            <ImageView
                android:id="@+id/shuffle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_shuffle"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/previousSong"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/shuffle"
                android:src="@drawable/icon_action_previous_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:src="@drawable/icon_action_pause_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/nextSong"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="30dp"
                android:layout_toStartOf="@+id/repeat"
                android:src="@drawable/icon_action_next_24"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/repeat"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_action_repeat_24"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>